<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greg\'s List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">Logo</string>
    <string name="hint1">Email Address</string>
    <string name="hint2">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button_home">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="SMU_email">SMU Email Address</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="title_activity_user_home">Home</string>
    <string name="nav1">Home</string>
    <string name="nav2">My Account</string>
    <string name="nav3">Logout</string>
    <string name="signup_text">Sign Up for Greg\'s List</string>
    <string name="bikes">Bikes</string>
    <string name="books">Books</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="meetups">Meetups</string>
    <string name="rides">Rides</string>
    <string name="misc">Miscellaneous</string>
    <string name="title_activity_account">My Account</string>
    <string name="contact">Contact Information</string>
    <string name="home_heading">Most Recent Listings</string>
    <string name="search_heading">Search Results - All Categories</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="mylisting">My Listings</string>
    <string name="watched">Watched Listings</string>
    <string name="title_activity_listing">View Listing</string>
    <string name="title_activity_search">Search Results</string>
    <string name="all">All</string>
    <string name="listings_header">Listing Details</string>

</resources>
