<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp"
    android:background="@drawable/other_background"
    android:orientation="vertical" >
    
       <TextView
       android:layout_width="wrap_content"
       android:layout_height= "wrap_content"
       android:text="@string/signup_text"
       android:id = "@+id/signup_text"
       android:textSize = "24sp"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="30dp"
       android:layout_marginTop="40dp"/>
    
       <EditText
       android:id="@+id/fname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="text|textNoSuggestions"
       android:hint="@string/fname"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       />
       
        <EditText
       android:id="@+id/lname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="text|textNoSuggestions"
       android:hint="@string/lname"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       />
        
         <EditText
       android:id="@+id/SMU_email"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress|textNoSuggestions"
       android:hint="@string/SMU_email"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       />
         
          <EditText
       android:id="@+id/password_signup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword|textNoSuggestions"
       android:hint="@string/password"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       />
          
          <EditText
       android:id="@+id/password_signup_two"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword|textNoSuggestions"
       android:hint="@string/password2"
       android:textColor="#ffffffff"
       android:layout_gravity="center_horizontal"
       />
          
        <Button 
      android:id ="@+id/sign_up_button"
      android:contentDescription="@drawable/sign_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:background = "@drawable/signup_2"
      android:layout_marginLeft="70dp"
       />
         



</LinearLayout>
