 <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
       <LinearLayout 
            android:layout_height = "wrap_content"
            android:layout_width = "wrap_content"
            android:orientation="vertical">
            
        <LinearLayout
        android:layout_height = "wrap_content" 
        android:layout_width = "wrap_content"
        android:orientation = "horizontal"
        android:id = "@+id/navbar">
    <Button 
        android:id="@+id/home"
        android:layout_height = "35dp"
        android:layout_width = "112dp"
        android:text = "@string/nav1"
        android:textSize = "12dp"
        android:layout_marginRight="-9dp"/>
    
     <Button 
        android:id="@+id/account"
        android:layout_height = "35dp"
        android:layout_width = "114dp"
        android:text = "@string/nav2"
        android:textSize = "12dp"
        android:layout_marginRight="-9dp"/>
     
      <Button 
        android:id= "@+id/logout"
        android:layout_height = "35dp"
        android:layout_width = "112dp"
        android:text = "@string/nav3"
        android:textSize = "12dp"/>
    </LinearLayout>
    </LinearLayout>
    </FrameLayout>