<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
       <LinearLayout 
            android:layout_height = "wrap_content"
            android:layout_width = "wrap_content"
            android:orientation="vertical">
            
        <LinearLayout
        android:layout_height = "wrap_content" 
        android:layout_width = "wrap_content"
        android:orientation = "horizontal"
        android:id = "@+id/navbar">
    <Button 
        android:layout_height = "35dp"
        android:layout_width = "112dp"
        android:text = "@string/nav1"
        android:textSize = "12dp"
        android:layout_marginRight="-9dp"/>
    
     <Button 
        android:id="@+id/account"
        android:layout_height = "35dp"
        android:layout_width = "114dp"
        android:text = "@string/nav2"
        android:textSize = "12dp"
        android:layout_marginRight="-9dp"/>
     
      <Button 
        android:id= "@+id/logout"
        android:layout_height = "35dp"
        android:layout_width = "112dp"
        android:text = "@string/nav3"
        android:textSize = "12dp"/>
    </LinearLayout>
    

    <LinearLayout 
        android:layout_width="310dp" 
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        android:layout_gravity="center"
        android:orientation="horizontal">
          <TextView
          android:id = "@+id/user_activity"
          android:layout_height = "wrap_content"
          android:layout_width = "wrap_content"
          android:text="@string/home_heading"
          android:textStyle="bold"
          android:textColor= "#10294f"
          android:paddingRight="90dp"
          />
          <EditText
              android:layout_height = "wrap_content"
              android:layout_width = "wrap_content"
              android:hint="Search"
              android:textSize="13dp"
              />
               </LinearLayout>
               
          <LinearLayout
              android:layout_width = "310dp"
              android:layout_height = "wrap_content"
              android:background="@drawable/outline"
              android:layout_gravity="center"
              android:orientation="vertical"> 
           <LinearLayout
               android:layout_width = "310dp"
               android:layout_height = "wrap_content"
               android:orientation="horizontal">
          <TextView 
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text="@string/title"
              android:paddingLeft="6dp"
              android:paddingRight = "150dp"
              android:textStyle="bold"
              android:textColor= "#10294f"/>
          
          <TextView 
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text="@string/category"
              android:textStyle="bold"
              android:textColor= "#10294f"/>
          </LinearLayout>
          
          <ListView
          android:id="@+id/listview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          </ListView>
          </LinearLayout>
        
    </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>