<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

   <EditText
       android:id="@+id/email"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress"
       android:layout_centerInParent="true"
       android:hint="@string/hint1"
       android:textColor="#10294f"
       />
   
      <EditText
       android:id="@+id/password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword"
       android:hint="@string/hint2"
	   android:layout_centerHorizontal="true"
	   android:layout_below="@id/email"
	   android:textColor="#10294f"
       />
      
      <Button 
      android:id ="@+id/login_button"
      android:contentDescription="@drawable/sign_in"
      android:layout_width="100dp"
      android:layout_height="40dp"
      android:layout_below="@id/password"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="15dp"
      android:onClick="sendMessage"
      android:text = "@string/login_button"
       />
        
</RelativeLayout>
